kubernetes/8_ejemplo_borrar/02.1-hello-app-deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-v3
  template:
    metadata:
      labels:
        app: hello-v3
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/echo-go:1.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
