kubernetes/8_ejemplo_borrar/04.1-hello-svc-v3.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v3-svc
spec:
  selector:
    app: hello-v3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
